--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="flex bg-blue-50 p-5 w-full justify-center relative bottom-0">
-  <p class="text-blue-500 pr-1 duration-500 hover:text-blue-400">使用條款</p>
+<footer class="flex bg-gray-200 p-5 w-full justify-center">
+  <p class="cursor-pointer text-blue-500 pr-1 duration-500 hover:text-blue-400">使用條款</p>
   <p class="pl-1">© 2021 SoundBar, Inc.</p>
 </footer>
