--- a/app/views/podcasts/_sidebar.html.erb
+++ b/app/views/podcasts/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="h-full bg-gray-200">
+<div class="h-screen bg-gray-100">
   <%= link_to image_tag("new_logo_black", size: "280x280"), podcasts_path %>
   <div class="flex justify-center">
     <div class="w-24 h-24 pt-3"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
