配合側欄, 連結後台路徑-podcasts完成

--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -22,5 +22,5 @@
   <button class='btn bg-blue-500 hover:bg-blue-700'><%= link_to "返回單集列表", podcast_path(@podcast.random_url) %></button>
 </div>
 <div>
-  <%= render '/layouts/footer' %>
+  <%= render '/backend/footer' %>
 </div>
