--- a/app/views/backend/_sidebar.html.erb
+++ b/app/views/backend/_sidebar.html.erb
@@ -1,4 +1,4 @@
-<div class="h-screen bg-gray-100">
+<div class="h-full min-h-screen bg-blue-50 border-r border-gray-300">
   <%= link_to image_tag("new_logo_black", size: "280x280"), podcasts_path %>
   <div class="flex justify-center">
     <div class="w-24 h-24 pt-3"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
@@ -13,13 +13,13 @@
     <li class="sidebar_list">
       <a href="">
         <span class="p-1"><i class="far fa-file-alt"></i></span>
-        <span>節目資訊</span>
+        <%= link_to "節目資訊", info_podcast_path(@podcast.random_url) %>
       </a>
     </li>
     <li class="sidebar_list">
       <a href="">
         <span class="p-1"><i class="fas fa-list-ul"></i></span>
-        <span>單集列表</span>
+        <%= link_to "單集列表", podcast_episodes_path(@podcast.random_url) %>
       </a>
     </li>
     <li class="sidebar_list">
@@ -30,8 +30,14 @@
     </li>
     <li class="sidebar_list">
       <a href="">
+        <span class="p-1"><i class="far fa-file-alt"></i></span>
+        <%= link_to "行銷資源", resource_music_podcast_path(@podcast.random_url) %>
+      </a>
+    </li>
+    <li class="sidebar_list">
+      <a href="">
         <span class="p-1"><i class="fas fa-comment-dollar"></i></span>
-        <span>創作盈利</span>
+        <%= link_to "創作營利", donate_podcast_path(@podcast.random_url) %>
       </a>
     </li>
   </ul>
