--- a/app/views/podcasts/DELETE_show.html.erb
+++ b/app/views/podcasts/DELETE_show.html.erb
@@ -4,7 +4,7 @@
   </div> -->
 </header>
 <div class="flex">
-  <div class="side_bar min-w-2xl sm:w-0"><%= render 'sidebar' %></div>
+  <div class="side_bar min-w-2xl sm:w-0"><%= render '/backend/sidebar' %></div>
   <div class="w-5/6">
     <h1 class="text-center text-2xl font-bold m-10">節目資訊</h1>
     <div class="bg-gray-100">
@@ -62,7 +62,7 @@
   </div>
 </div>
 <div>
-  <%= render '/layouts/footer' %>
+  <%= render '/backend/footer' %>
 </div>
 
 
