--- a/app/views/podcasts/donate.html.erb
+++ b/app/views/podcasts/donate.html.erb
@@ -10,8 +10,8 @@
 
 
 <div class="flex">
-  <div class="side_bar min-w-2xl sm:w-0 w-60"><%= render 'sidebar' %></div>
-  <div class="flex flex-col w-full relative bg-gray-200 min-h-screen">
+  <div class="side_bar min-w-2xl sm:w-0 w-60"><%= render '/backend/sidebar' %></div>
+  <div class="flex flex-col w-full relative bg-gray-100 min-h-screen">
     <!-- NavBar -->
     <div class="absolute top-0 w-full">
       <!-- 這邊要插入NavBar -->
@@ -32,7 +32,7 @@
       </div>
     </div>
     <!-- 下半框 -->
-    <div class="bg-gray-200">
+    <div class="bg-gray-100">
 
       <section class="font-medium flex flex-col">
 
@@ -146,7 +146,7 @@
     </div>
     <!-- Footer -->
     <div class="absolute bottom-0 w-full">
-      <%= render '/layouts/footer' %>
+      <%= render '/backend/footer' %>
     </div>
   </div>
 </div>
