--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -13,7 +13,21 @@
     </div>
      <!-- 下半框 -->
      <div class="bg-gray-100">
+       <section class="container w-2/3 mx-auto mt-6">
+        <!-- 搜尋框及新增單集 -->
+        <div class="flex justify-between">
+          <form class="search-form flex bg-white border border-gray-300 hover:border-blue-500 transition duration-300">
+            <input type="text" class="ml-3 p-1 bg-transparent focus:outline-none w-96" placeholder="搜尋單集">
+            <button class="mr-3 p-1 bg-transparent focus:outline-none text-gray-600">
+              <i class="fas fa-search"></i>
+            </button>
+          </form>
+          <div id="create-episode-btn" class="border border-gray-300 py-1 px-4 text-sm bg-white hover:text-blue-500 hover:border-blue-500 cursor-pointer transition duration-300 rounded">
+            ＋ 新增單集
+          </div>
+        </div>
 
+       </section>
      </div>
     <!-- Footer -->
     <div class="absolute bottom-0 w-full">
