--- a/app/views/backend/_sidebar.html.erb
+++ b/app/views/backend/_sidebar.html.erb
@@ -31,7 +31,7 @@
     <li class="sidebar_list">
       <a href="">
         <span class="p-1"><i class="far fa-file-alt"></i></span>
-        <%= link_to "行銷資源", resource_music_podcast_path(@podcast.random_url) %>
+        <%= link_to "創作資源", resource_music_podcast_path(@podcast.random_url) %>
       </a>
     </li>
     <li class="sidebar_list">
