--- a/app/views/podcasts/donate.html.erb
+++ b/app/views/podcasts/donate.html.erb
@@ -1,5 +1,5 @@
 <!-- 提領燈箱 -->
-<div class="withdraw-box fixed w-full h-full bg-black bg-opacity-50 flex justify-center hidden">
+<div class="withdraw-box fixed w-full h-full bg-black bg-opacity-50 flex justify-center hidden z-10">
   <div class="withdraw-box-content rounded h-40 bg-white py-7 pl-12 pr-7 mt-20 flex flex-col justify-between relative">
     <i class="far fa-times-circle text-red-400 absolute -ml-7 mt-2"></i>
     <label class="mb-2 text-lg">提領失敗</label>
@@ -25,8 +25,8 @@
       <div class="container container-donate w-2/3 mx-auto h-10 flex my-2">
         <div class="nav-tabs">
           <ul class="inline-flex" id="donateFrom">
-            <li class="cursor-pointer hover:text-blue-400 text-lg font-medium p-2 text-blue-500" id="playerDonate">聽眾贊助</li>
-            <li class="cursor-pointer hover:text-blue-400 text-lg font-medium p-2 " id="adDonate">廣告贊助</li>
+            <li class="cursor-pointer hover:text-blue-400 text-lg font-medium p-2 transition duration-200 text-blue-500" id="playerDonate">聽眾贊助</li>
+            <li class="cursor-pointer hover:text-blue-400 text-lg font-medium p-2 transition duration-200" id="adDonate">廣告贊助</li>
           </ul>
         </div>
       </div>
@@ -42,9 +42,9 @@
           <!-- Nav-Tabs -->
           <div class="nav-tabs">
             <ul class="inline-flex text-sm" id="donateTabs">
-              <li class="cursor-pointer hover:text-blue-400 px-3 py-2 bg-white text-blue-500" id="donateLink">贊助連結</li>
-              <li class="cursor-pointer hover:text-blue-400 px-3 py-2" id="donationList">我的進帳</li>
-              <li class="cursor-pointer hover:text-blue-400 px-3 py-2" id="myMoney">我的錢包</li>
+              <li class="cursor-pointer hover:text-blue-400 px-3 py-2 transition duration-200 bg-white text-blue-500" id="donateLink">贊助連結</li>
+              <li class="cursor-pointer hover:text-blue-400 px-3 py-2 transition duration-200" id="donationList">我的進帳</li>
+              <li class="cursor-pointer hover:text-blue-400 px-3 py-2 transition duration-200" id="myMoney">我的錢包</li>
             </ul>
           </div>
 
@@ -53,14 +53,14 @@
             <div class="donateLink_content flex flex-col">
               <p class="text-lg font-bold">讓聽眾能用最簡單的方式支持你</p>
               <label class="text-sm mt-4">分享此連結，讓你的聽眾輕鬆贊助你的創作</label>
-              <span class="flex justify-between border border-gray-300 mt-3 mb-10 py-1 bg-gray-200 ">
-                <%= link_to '<i class="fas fa-link"></i>'.html_safe, donate_podcast_url(@podcast.random_url, subdomain: "player"), class: "text-blue-500 ml-2" %>
-                <input type="text" class="flex-grow mx-2 bg-gray-200 text-gray-400 cursor-not-allowed" disabled value="<%= donate_podcast_url(@podcast.random_url) %>">
-                <span class="copy_donate_link cursor-pointer text-gray-400 mr-2"><i class="far fa-copy"></i></span>
+              <span class="flex justify-between border border-gray-100 mt-3 mb-10 py-1 bg-gray-100 rounded hover:border hover:border-blue-500 transition duration-300">
+                <%= link_to '<i class="fas fa-link"></i>'.html_safe, donate_player_podcast_url(@podcast.random_url, subdomain: "player"), class: "text-blue-500 ml-2 hover:text-blue-400 transition duration-200", target: "_blank" %>
+                <input type="text" id="donateLinkInput" class="flex-grow mx-2 bg-gray-100 text-gray-400 cursor-not-allowed focus:outline-none" readonly value="<%= donate_player_podcast_url(@podcast.random_url) %>">
+                <span class="copy-donate-link cursor-pointer text-gray-400 mr-2 hover:text-gray-300"><i class="far fa-copy"></i></span>
               </span>
               <%= simple_form_for @podcast, url: podcast_path(@podcast) do |f| %>
               <label class="text-sm">贊助頁面標題</label>
-              <%= f.input :donate_title, label: false, input_html:{class: "flex text-sm w-full border hover:border-blue-500 focus:border-blue-500 my-2 p-2" } %>
+              <%= f.input :donate_title, label: false, input_html:{class: "flex text-sm w-full border hover:border-blue-500 focus:border-blue-500 my-2 p-2 rounded transition duration-300 focus:outline-none" } %>
               <%= f.submit "儲存", class: "w-auto rounded-lg font-medium text-white px-4 py-1 mt-3 btn-primary" %>
               <% end %>
             </div>
