navbar樣板完成 podcasts#index CSS完成

--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -3,10 +3,10 @@
   <div class="flex flex-col w-full relative bg-gray-100 min-h-screen">
     <!-- NavBar -->
     <div class="absolute top-0 w-full">
-      <!-- 這邊要插入NavBar -->
+      <%= render '/backend/navbar' %>
     </div>
     <!-- 上半框 -->
-    <div class="bg-white">
+    <div class="bg-white mt-20">
       <div class="container container-donate w-2/3 mx-auto py-6 bg-white">
         <h1 class="text-xl font-black">單集列表</h1>
       </div>
