--- a/app/views/podcasts/DELETE_show.html.erb
+++ b/app/views/podcasts/DELETE_show.html.erb
@@ -4,7 +4,7 @@
   </div> -->
 </header>
 <div class="flex">
-  <div class="side_bar min-w-2xl sm:w-0"><%= render '/backend/sidebar' %></div>
+  <div class="bg-blue-50 border-r border-gray-300 min-w-2xl sm:w-0"><%= render '/backend/sidebar' %></div>
   <div class="w-5/6">
     <h1 class="text-center text-2xl font-bold m-10">節目資訊</h1>
     <div class="bg-gray-100">
