--- a/app/views/podcasts/donate.html.erb
+++ b/app/views/podcasts/donate.html.erb
@@ -10,7 +10,7 @@
 
 
 <div class="flex">
-  <div class="side_bar min-w-2xl sm:w-0 w-60"><%= render '/backend/sidebar' %></div>
+  <div class="bg-blue-50 border-r border-gray-300 min-w-2xl sm:w-0 w-60"><%= render '/backend/sidebar' %></div>
   <div class="flex flex-col w-full relative bg-gray-100 min-h-screen">
     <!-- NavBar -->
     <div class="absolute top-0 w-full">
