fix搜尋框功能JS

--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -14,7 +14,7 @@
     <section class="font-medium flex flex-wrap container w-2/3 mx-auto mt-6">
       <!-- 搜尋框及建立Podcast -->
       <div class="flex justify-between w-full">
-        <form class="search-form flex bg-white border border-gray-300 hover:border-blue-500 transition duration-300">
+        <form class="search-form flex bg-white border border-gray-300 hover:border-blue-400 rounded transition duration-300">
           <input type="text" class="ml-3 p-1 bg-transparent focus:outline-none w-60" placeholder="搜尋單集">
           <button class="mr-3 p-1 bg-transparent focus:outline-none text-gray-600">
             <i class="fas fa-search"></i>
