--- a/app/javascript/styles/common.scss
+++ b/app/javascript/styles/common.scss
@@ -3,7 +3,7 @@
 }
 
 .search-bar-ring {
-  @apply border-blue-600 ring-2 ring-blue-400;
+  @apply border-blue-400 ring ring-blue-100;
 }
 
 .welcome {
