--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -16,7 +16,7 @@
        <section class="container w-2/3 mx-auto mt-6">
         <!-- 搜尋框及新增單集 -->
         <div class="flex justify-between">
-          <form class="search-form flex bg-white border border-gray-300 hover:border-blue-500 transition duration-300">
+          <form class="search-form flex bg-white border border-gray-300 hover:border-blue-400 rounded transition duration-300">
             <input type="text" class="ml-3 p-1 bg-transparent focus:outline-none w-96" placeholder="搜尋單集">
             <button class="mr-3 p-1 bg-transparent focus:outline-none text-gray-600">
               <i class="fas fa-search"></i>
