單集列表 表格完成

--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -26,7 +26,31 @@
             ＋ 新增單集
           </div>
         </div>
-
+        <!-- 單集列表 -->
+        <div class="mt-6">
+          <table class="border border-gray-200 w-full">
+            <thead class="bg-red-50 text-sm">
+              <th class="p-2 w-24"></th>
+              <th class="p-2 w-10">#</th>
+              <th class="p-2 text-left">標題</th>
+              <th class="p-2 w-40 text-right">發布日期</th>
+              <th class="p-2 w-20">連結</th>
+            </thead>
+            <tbody class="bg-white">
+              <% @podcast.episodes.each do |episode| %>
+                <tr>
+                  <td class="p-2 w-24"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></td>
+                  <td class="w-10"><%= link_to "S#{episode.season}E#{episode.episode}", podcast_episode_path(@podcast.random_url, episode.random_url), class: "block py-4 px-2" %></td>
+                  <td class="text-left"><%= link_to episode.title, podcast_episode_path(@podcast.random_url, episode.random_url), class: "block py-4 px-2" %></td>
+                  <td class="w-40 text-right text-sm">
+                    <%= link_to "#{episode.created_at.strftime('%m月%d日 %H:%M')}<br>#{episode.created_at.strftime('%Y年')}".html_safe, podcast_episode_path(@podcast.random_url, episode.random_url), class: "block p-2" %>
+                  </td>
+                  <td class="p-2 text-center w-20"><span id="episodeLink" class="cursor-pointer border border-gray-200 text-gray-400 hover:border-blue-400 hover:text-blue-400 rounded-full py-1 px-2"><i class="fas fa-link"></i></span></td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
        </section>
      </div>
     <!-- Footer -->
