--- a/app/views/episodes/show.html.erb
+++ b/app/views/episodes/show.html.erb
@@ -1,26 +1,60 @@
-<div class="flex m-6 justify-center">
-  <%= link_to image_tag("new_logo_black", size: "280x280"), "/podcaster/podcasts" %>
-</div>
-<h1 class="flex justify-center m-5 text-2xl font-bold"><%= @episode.title %></h1>
+<div class="flex">
+  <div class="bg-blue-50 border-r border-gray-300 min-w-2xl sm:w-0 w-60"><%= render '/backend/sidebar' %></div>
+  <div class="flex flex-col w-full relative bg-gray-100 min-h-screen">
+    <!-- NavBar -->
+    <div class="absolute top-0 w-full">
+      <%= render '/backend/navbar' %>
+    </div>
+    <!-- 上半框 -->
+    <div class="bg-white mt-20">
+      <div class="container container-donate w-2/3 mx-auto py-6 bg-white">
+        <h1 class="text-xl font-black"><%= @episode.title %></h1>
+        <div class="flex justify-between mt-6">
+          <p class="text-sm text-gray-500">發布於 <%= @episode.created_at.strftime('%Y年%m月%d日 %H:%M') %></p>
+          <span id="create-episode-btn" class="flex justify-between items-center border border-gray-300 py-1 px-4 text-sm bg-white hover:text-blue-500 hover:border-blue-500 cursor-pointer transition duration-300 rounded">
+            <i class="far fa-caret-square-right"></i>
+            <p class="ml-2">網頁播放器</p>
+          </span>
+        </div>
 
-<ul class="grid justify-center">
-  <li class="podcast-info">・完整檔案：</li>
-  <div class="grid justify-center mb-5">
-    <audio controls="controls" preload="none" autostart="false" class="w-96">
-        <source src="<%= @episode.recording.url %>" type="audio/mp3"></source>
-    </audio>
+      </div>
+    </div>
+     <!-- 下半框 -->
+     <div class="bg-gray-100 mb-16">
+       <section class="container w-2/3 mx-auto mt-6">
+        <!-- 搜尋框及新增單集 -->
+        <div class="flex justify-between">
+          <span id="create-episode-btn" class="flex justify-between items-center border border-gray-300 pt-1 pb-2 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
+            重置
+          </span>
+          <div class="flex">
+            <div id="create-episode-btn" class="mx-1 text-blue-500 border border-blue-500 py-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
+              暫存草稿
+            </div>
+            <div id="create-episode-btn" class="mx-1 text-white py-1 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded">
+              儲存
+            </div>
+          </div>
+        </div>
+        <!-- 編輯單集 -->
+        <div class="mt-6">
+          <%= simple_form_for @episode, url: podcast_episode_path(@podcast.random_url, @episode.random_url) do |f| %>
+          <%= f.input :title, input_html:{class: "fill-form" }, label: "標題" %>
+          <%= f.input :description, input_html:{class: "fill-form" }, label: "描述" %>
+          <%= f.input :keyword, input_html:{class: "fill-form" }, label: "關鍵字" %>
+          <%= f.input :season, input_html:{class: "fill-form" }, label: "季" %>
+          <%= f.input :episode, input_html:{class: "fill-form" }, label: "集" %>
+          <%= f.input :explicit, input_html:{class: "" }, label: "兒童不宜" %>
+          <%= f.input :status, collection: ["草稿", "發布"], input_html:{class: "fill-form" }, label: "狀態" %>
+          <%= f.input :recording, as: :file, input_html:{class: "flex" }, label: "更新音檔 MP3" %>
+          <%= f.button :submit, "更新單集", class: "btn-primary btn" %>
+        <% end %>
+        </div>
+       </section>
+     </div>
+    <!-- Footer -->
+    <div class="absolute bottom-0 w-full">
+      <%= render '/backend/footer' %>
+    </div>
   </div>
-  <li class="podcast-info">・標題：<%= @episode.title %></li>
-  <li class="podcast-info">・描述：<%= @episode.description %></li>
-  <li class="podcast-info">・季數：<%= @episode.season %></li>
-  <li class="podcast-info">・集數：<%= @episode.episode %></li>
-  <li class="podcast-info">・關鍵字：<%= @episode.keyword %></li>
-  <li class="podcast-info">・兒童不宜：<%= @episode.explicit %></li>
-</ul>
-
-<div class='flex items-center justify-center  md:gap-8 gap-4 pt-5 pb-5'>
-  <button class='btn bg-blue-500 hover:bg-blue-700'><%= link_to "返回單集列表", podcast_path(@podcast.random_url) %></button>
-</div>
-<div>
-  <%= render '/backend/footer' %>
 </div>
