run prettier --write

--- a/app/javascript/styles/p_show.scss
+++ b/app/javascript/styles/p_show.scss
@@ -1,20 +1,18 @@
-
-  #subscription {
-    display: none;
-  }
-  .subscription{
-    max-width: 200px;
-  }
-  .check-sign-up{
-    background-color: grey;
-    overflow: hidden;
-    max-height: 0;
-    transition:(max-height .3s);
-  }
-  #subscription:checked ~ .check-sign-up{
+#subscription {
+  display: none;
+}
+.subscription {
+  max-width: 200px;
+}
+.check-sign-up {
+  background-color: grey;
+  overflow: hidden;
+  max-height: 0;
+  transition: (max-height 0.3s);
+}
+#subscription:checked ~ .check-sign-up {
   max-height: 300px;
-  }
-  .sign-up {
-    color: blue;
-  }
-
+}
+.sign-up {
+  color: blue;
+}
