--- a/app/javascript/styles/player.scss
+++ b/app/javascript/styles/player.scss
@@ -6,26 +6,21 @@
   @apply mx-auto;
 }
 
-@media (max-width: 1024px) {
-  .container {
-  }
-}
-
 .cover_line {
   @apply relative w-52 m-px transform hover:-translate-y-1 hover:scale-110 transition duration-300;
 }
 
-.imgBox { /* now a container for the image */
-  display: inline-block; /* shrink wrap to image */
-  overflow: hidden; /* hide the excess */
+.imgBox {
+  display: inline-block;
+  overflow: hidden;
+  .imgBox img {
+    display: block;
+    transition: 1s ease-in-out;
+  }
 }
-.imgBox img {
-  display: block; /* no whitespace */
-  transition: .3s ease-in-out;
-}
+
 .imgBox:hover img {
   transform: scale(1.1);
-  z-index: 10;
 }
 
 .front_arrow {
@@ -34,4 +29,16 @@
 
 .back_arrow {
   @apply absolute right-0 z-10 bg-yellow-50 opacity-20 p-3 hover:opacity-50 duration-300;
+}
+
+.footerbg {
+  @apply bg-footerbg text-gray-300 p-4;
+}
+
+.footer_link {
+  @apply p-3 text-gray-500 hover:text-white duration-300;
+}
+
+.footer_copyright {
+  @apply flex justify-center bg-footerbg text-gray-500 pb-5 pt-5 border-gray-400 border-t;
 }
