--- a/app/views/player/podcasts/browse.html.erb
+++ b/app/views/player/podcasts/browse.html.erb
@@ -1,7 +1,7 @@
 <html class="bg-indigo">
   <header class="flex justify-between">
     <div class="flex m-4 justify-center md:justify-start">
-      <%= image_tag("logo_trans", size: "250x250") %>
+      <%= link_to image_tag("logo_trans", size: "250x250"), "/#" %>
     </div>
     <form class="search-form border hover:border-blue-600 rounded flex my-auto mr-10">
       <button class="search-btn focus:outline-none w-10 bg-white rounded-l text-gray-500 border-none p-2"><i class="fas fa-search"></i></button><input type="text" class="search-input focus:outline-none w-auto bg-white rounded-r border-none p-2" placeholder="搜尋 Podcast">
@@ -9,32 +9,73 @@
   </header>
 
   <section class="container player_page grid relative ml-5 h-screen">
-    <div class="">
+    <div class="ml-5">
       <h1 class="text-4xl text-titleblue">隨時隨地, 找到頻率最對的聲音</h1>
-    <div class="text-white mt-3">
-      <p>經典並非老派</p>
-      <p>SoundOn 以音頻為基礎, 結合創新科技應用</p>
-      <p>收藏你所愛, 毋須擔心過時的問題</p>
-      <p>人性化的設計讓您隨時擁有溫度的聲音</p>
-    </div>
-    <h2 class="text-white text-2xl mt-20 mb-6">新聲報到</h2>
-
-    <div class="flex">
-      <% @podcasts.each do |podcast| %>
-      <button class="front_arrow">
-        <i class="fas fa-chevron-left"></i>
-      </button>
-      <div class="cover_line imgBox">
-        <div class="">
-          <div class=""><img src="https://picsum.photos/200/200/?random=1"></div>
-        </div>
+      <div class="text-white mt-3">
+        <p>經典並非老派</p>
+        <p>SoundOn 以音頻為基礎, 結合創新科技應用</p>
+        <p>收藏你所愛, 毋須擔心過時的問題</p>
+        <p>人性化的設計讓您隨時擁有溫度的聲音</p>
       </div>
-      <button class="back_arrow">
-        <i class="fas fa-chevron-right"></i>
-      </button>
-      <% end %>
-    </div>
-
+      <h2 class="text-white text-2xl mt-20 mb-6">新聲報到</h2>
+      <div class="flex">
+        <% @podcasts.each do |podcast| %>
+        <button class="front_arrow">
+          <i class="fas fa-chevron-left"></i>
+        </button>
+        <div class="cover_line imgBox">
+          <div class="">
+            <div class="relative"><img src="https://picsum.photos/200/200/?random=1"></div>
+          </div>
+        </div>
+        <button class="back_arrow">
+          <i class="fas fa-chevron-right"></i>
+        </button>
+        <% end %>
+      </div>
+      <h2 class="text-white text-2xl mt-20 mb-6">熱議發燒</h2>
+      <div class="flex">
+        <% @podcasts.each do |podcast| %>
+        <button class="front_arrow">
+          <i class="fas fa-chevron-left"></i>
+        </button>
+        <div class="cover_line imgBox">
+          <div class="">
+            <div class="relative"><img src="https://picsum.photos/200/200/?random=1"></div>
+          </div>
+        </div>
+        <button class="back_arrow">
+          <i class="fas fa-chevron-right"></i>
+        </button>
+        <% end %>
+      </div>
     </div>
   </section>
+  <footer class="footerbg">
+    <div class="flex flex-wrap justify-around">
+      <div class=""><%= link_to image_tag("logo_trans", size: "180x180"), "/#" %></div>
+      <div>
+        <ul class="flex py-2">
+          <li class="footer_link"><a href="">官方網站</a></li>
+          <li class="footer_link"><a href="">投放廣告</a></li>
+          <li class="footer_link"><a href="">原創節目</a></li>
+          <li class="footer_link"><a href="">創作者平台</a></li>
+          <li class="footer_link"><a href="">客服中心</a></li>
+        </ul>
+      </div>
+      <div>
+        <ul class="flex">
+          <li class="footer_link text-4xl"><a href=""><i class="fab fa-facebook-square"></i></a></li>
+          <li class="footer_link text-4xl"><a href=""><i class="fab fa-instagram-square"></i></a></li>
+          <li class="footer_link text-4xl"><a href=""><i class="fab fa-medium"></i></a></li>
+          <li class="footer_link text-4xl"><a href=""><i class="fas fa-envelope-square"></i></a></li>
+        </ul>
+      </div>
+    </div>
+  </footer>
+  <div class="footer_copyright">
+    <p class="p-1">©</p>
+    <p class="p-1">2021</p>
+    <p class="p-1">SoundBar</p>
+  </div>
 </html>
