建立Podcast完成；建立單集版面初步完成，功能未完成

--- a/app/views/podcasts/donate.html.erb
+++ b/app/views/podcasts/donate.html.erb
@@ -25,7 +25,7 @@
       <div class="container container-donate w-2/3 mx-auto h-10 flex my-2">
         <div class="nav-tabs">
           <ul class="inline-flex" id="donateFrom">
-            <li class="cursor-pointer hover:text-blue-400 text-lg font-medium p-2 transition duration-200 text-blue-500" id="playerDonate">聽眾贊助</li>
+            <li class="cursor-pointer hover:text-blue-400 text-lg font-medium p-2 transition duration-200 text-blue-500 border-b-2 border-blue-400" id="playerDonate">聽眾贊助</li>
             <li class="cursor-pointer hover:text-blue-400 text-lg font-medium p-2 transition duration-200" id="adDonate">廣告贊助</li>
           </ul>
         </div>
