--- a/app/javascript/styles/form.scss
+++ b/app/javascript/styles/form.scss
@@ -21,3 +21,7 @@ abbr[title="required"] {
 .sign_form {
   @apply mt-1 pl-5 block w-full border-none bg-gray-100 h-11 rounded-xl shadow-lg hover:bg-blue-100 focus:bg-blue-100 focus:ring-0;
 }
+
+.edit-form {
+  @apply w-full border rounded-md mx-2 my-3 p-1 hover:border-blue-400 focus:outline-none focus:border-blue-400 focus:ring focus:ring-blue-100;
+}
