--- a/app/views/podcasts/info.erb
+++ b/app/views/podcasts/info.erb
@@ -14,7 +14,47 @@
     </div>
     <!-- 下半框 -->
     <div class="bg-gray-100 mb-16">
-      <%= render 'form', podcast: @podcast %>
+      <section class="container container-info w-2/3 mx-auto mt-6">
+        <%= simple_form_for @podcast, url: podcast_path(@podcast.random_url) do |f| %>
+        <div class="flex justify-between">
+          <span id="create-episode-btn" class="flex justify-between items-center border border-gray-300 pt-1 pb-2 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded">
+            重置
+          </span>
+          <%= f.submit "儲存", class: "mx-2 text-white py-2 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded" %>
+        </div>
+        <section class="w-full mt-6 p-4 flex bg-white rounded border border-gray-200">
+          <div class="w-full text-sm pr-4">
+            <%= f.input :name, input_html:{class: "edit-form" }, label: "Podcast 節目名稱"%>
+            <%= f.input :artist, input_html:{class: "edit-form" }, label: "創作者名稱" %>
+            <%= f.input :email, input_html:{class: "edit-form" }, label: "Email" %>
+          </div>
+          <div class="podcast-cover w-56 h-64 pr-2 pt-2 rounded flex flex-col flex-shrink-0 items-end">
+            <div class="w-48 h-48 rounded-lg bg-gray-300"><%= image_tag(@podcast.cover.url) if @podcast.cover? %></div>
+            <%= f.input :cover, as: :file, input_html:{class: "w-36 border border-gray-300 my-2 mx-4 py-1 px-4 text-sm bg-white hover:text-blue-400 hover:border-blue-400 cursor-pointer transition duration-300 rounded" }, label: false %>
+          </div>
+        </section>
+        <section class="w-full mt-6 p-4 bg-white rounded border border-gray-200 text-sm">
+          <%= f.input :description, input_html:{class: "edit-form" }, label: "描述", placeholder: "描述這個 Podcast 所包含的內容。" %>
+          <%= f.input :subtitle, input_html:{class: "edit-form" }, label: "Subtitle" %>
+        </section>
+        <section class="w-full mt-6 p-4 bg-white rounded border border-gray-200 text-sm">
+          <%= f.input :genres, collection: Podcast.genres.keys, input_html:{class: "edit-form" }, label: "類別" %>
+          <%= f.input :language, collection: ["繁體中文", "简体中文", "粵語", "English", "日本語", "한국어"], input_html:{class: "edit-form" }, label: "語言" %>
+        </section>
+        <section class="w-full mt-6 p-4 bg-white rounded border border-gray-200 text-sm">
+          <%= f.input :slug, input_html:{class: "edit-form" }, label: "好記短網址", hint: "必須為英文與數字，請勿使用特殊符號。" %>
+          <%= f.input :weblink, input_html:{class: "edit-form" }, label: "網站連結" %>
+        </section>
+        <section class="w-full mt-6 p-4 bg-white rounded border border-gray-200 text-sm">
+          <%= f.input :copyright, input_html:{class: "edit-form" }, label: "版權宣告Copyright" %>
+          <%= f.input :explicit, input_html:{class: "m-2 p-2" }, label: "兒童不宜" %>
+        </section>
+        <div class="flex justify-between mt-6">
+          <%= link_to "刪除節目", podcast_path(@podcast.random_url), method: "delete", data: {confirm: "是否確認刪除？"}, class: "mx-1 text-red-500 border border-red-500 py-2 px-4 text-sm bg-white hover:text-red-400 hover:border-red-400 cursor-pointer transition duration-300 rounded" %>
+          <%= f.submit "儲存", class: "mx-2 text-white py-2 px-4 text-sm bg-blue-500 hover:bg-blue-400 cursor-pointer transition duration-300 rounded" %>
+        </div>
+        <% end %>
+      </section>
     </div>
     <!-- Footer -->
     <div class="absolute bottom-0 w-full">
