design player/browse and player/p page

--- a/app/javascript/styles/p_show.scss
+++ b/app/javascript/styles/p_show.scss
@@ -5,14 +5,20 @@
   max-width: 200px;
 }
 .check-sign-up {
-  background-color: grey;
+  background-color: white;
+  border: 5px;
+  border-radius: 5px;
   overflow: hidden;
   max-height: 0;
   transition:(max-height .3s);
 }
 #subscription:checked ~ .check-sign-up {
-max-height: 300px;
+  max-height: 300px;
+  padding: 5px;
+  color: red;
+  text-align: center;
 }
 .sign-up {
   color: blue;
+  text-align: center;
 }
