--- a/app/views/player/podcasts/show.html.erb
+++ b/app/views/player/podcasts/show.html.erb
@@ -1,105 +1,92 @@
-<header class="flex justify-between bg-gray-700">
-  <div class="flex m-6 justify-center md:justify-start">
-    <%= image_tag("logo", size: "180x180" ) %>
+<header class="flex justify-between bg-indigo">
+  <div class="flex m-4 justify-center md:justify-start">
+    <%= link_to image_tag("logo_trans", size: "250x250"), "/#" %>
   </div>
   <form class="search-form border hover:border-blue-600 rounded flex my-auto mr-10">
     <button class="search-btn focus:outline-none w-10 bg-white rounded-l text-gray-500 border-none p-2"><i class="fas fa-search"></i></button><input type="text" class="search-input focus:outline-none w-72 bg-white rounded-r border-none p-2" placeholder="搜尋 Podcast">
   </form>
 </header>
-<% if user_signed_in? %>
-  <button class="subscribed-btn <%= 'bg-red-400' if current_user.subscribe?(@podcast) %>" data-id="<%= @podcast.id %>">
-    訂閱
-  </button>
-  <% else %>
-    <div class="subscribe">
-      <button class="button">
-        <label for="subscription">訂閱</label>
-      </button>
-      <input type="checkbox" id="subscription">
-      <div class="check-sign-up">
-        <span>訂閱前請先登入</span> </br>
-        <div class="sign-up">
-          <%= link_to "登入" , new_user_registration_path %>
+
+<div class="bg-indigo">
+  <div class="max-w-screen-lg mx-auto">
+    <div class="">
+      <span class="bg-genresbg m-10 py-1 px-5 text-white rounded-xl"><%= @podcast.genres %></span>
+      <div class="ms:flex m-10 md:flex">
+        <div class="cover_size">
+          <%= image_tag(@podcast.cover.url) if @podcast.cover? %>
+        </div>
+        <div>
+          <ul class="">
+            <li class="p-1 text-blue-300 text-xl"><%= @podcast.subtitle %></li>
+            <li class="p-1 text-white text-4xl"><%= @podcast.name %></li>
+            <li class="p-1 text-white"><%= @podcast.description %></li>
+            <li class="p-1 text-white"><a href="<%= @podcast.weblink %>" class="pr-3"><i class="fas fa-globe-americas"></i></a><%= @podcast.weblink %></li>
+            <li class="flex p-1 pt-8 text-gray-500">
+              <a href="" class="fb_icon"><i class="fab fa-facebook-f"></i></a>
+              <a href="" class="share_icon"><i class="fas fa-share"></i></a>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
-    <% end %>
-      <section class="bg-gray-700 h-screen">
-        <h1 class="text-center text-4xl">節目資訊</h1>
-
-        <div class="flex justify-center text-xl m-10">
-          <div>
-            <%= image_tag(@podcast.cover.url) if @podcast.cover? %>
-          </div>
-        </div>
-
-        <ul class="grid justify-center">
-          <li class="podcast-info">・Podcast 節目名稱：<%= @podcast.name %>
-          </li>
-          <li class="podcast-info">・創作者名稱：<%= @podcast.artist %>
-          </li>
-          <li class="podcast-info">・類別：<%= @podcast.genres %>
-          </li>
-          <li class="podcast-info">・Email：<%= @podcast.email %>
-          </li>
-          <li class="podcast-info">・描述：<%= @podcast.description %>
-          </li>
-          <li class="podcast-info">・Subtitle：<%= @podcast.subtitle %>
-          </li>
-          <li class="podcast-info">・語言：<%= @podcast.language %>
-          </li>
-          <li class="podcast-info">・好記短網址：<%= @podcast.slug %>
-          </li>
-          <li class="podcast-info">・版權宣告：<%= @podcast.copyright %>
-          </li>
-          <li class="podcast-info">・兒童不宜：<%= @podcast.explicit %>
-          </li>
-          <button>
-            <%= link_to "贊助" , donate_player_podcast_path(@podcast.random_url), class: "btn btn-primary" %>
-          </button>
-        </ul>
-        <br>
-
-        <section>
-          <div class="grid justify-center">
-            <h2 class="text-xl font-bold flex justify-center underline">Episode 節目列表</h2>
-            <table>
-              <thead>
-                <th class="table-content">季數／集數</th>
-                <th class="table-content">標題</th>
-                <th class="table-content">發布日期</th>
-                <th class="table-content"></th>
-                <th class="table-content"></th>
-                <th class="table-content"></th>
-              </thead>
-              <tbody>
-                <% @episodes.each do |episode| %>
-                  <tr>
-                    <td class="table-content">S<%= episode.season %>E<%= episode.episode %>
-                    </td>
-                    <td class="table-content">
-                      <%= episode.title %>
-                    </td>
-                    <td class="table-content">
-                      <%= episode.created_at %>
-                    </td>
-                    <td class="table-content button-link">
-                      <%= link_to "收聽" , player_podcast_episode_path(@podcast.random_url, episode.random_url) %>
-                    </td>
-          </div>
-          <% end %>
-            </tbody>
-            </table>
+      <div class="flex justify-center m-5 p-5">
+        <button class="btn btn-primary text-xl">
+          <%= link_to "贊助" , donate_player_podcast_path(@podcast.random_url)  %>
+        </button>
+        <% if user_signed_in? %>
+        <button class="subscribed-btn <%= 'bg-red-400' if current_user.subscribe?(@podcast) %>" data-id="<%= @podcast.id %>">訂閱</button>
+        <% else %>
+          <div class="subscribe">
+            <button class="button m-2 text-xl">
+              <label for="subscription">訂閱</label>
+            </button>
+            <input type="checkbox" id="subscription">
+            <div class="check-sign-up">
+              <span>訂閱前請先登入</span> </br>
+              <div class="sign-up">
+                <%= link_to "＜登入＞" , new_user_registration_path %>
+              </div>
             </div>
-            <div class="flex justify-center">
-              <button class="border rounded-md p-3 m-3 text-white bg-blue-500 hover:bg-blue-700">
-                <%= link_to "返回 Podcast 節目列表" , podcasts_path %>
-              </button>
-              <div>
-        </section>
-      </section>
+          </div>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
 
-      <footer class="flex bg-blue-50 p-5 justify-center">
-        <p class="text-blue-500 pr-1 duration-500 hover:text-blue-400">使用條款</p>
-        <p class="pl-1">© 2021 SoundBar, Inc.</p>
-      </footer>
+<div class="">
+  <div class="max-w-screen-lg mx-auto">
+    <div class="bg-white">
+      <div class="grid justify-center">
+        <h2 class="text-xl font-bold flex justify-center underline">Episode 節目列表</h2>
+        <table>
+          <thead>
+            <th class="table-content">季數／集數</th>
+            <th class="table-content">標題</th>
+            <th class="table-content">發布日期</th>
+            <th class="table-content"></th>
+            <th class="table-content"></th>
+            <th class="table-content"></th>
+          </thead>
+          <tbody>
+            <% @episodes.each do |episode| %>
+              <tr>
+                <td class="table-content">S<%= episode.season %>E<%= episode.episode %></td>
+                <td class="table-content"><%= episode.title %></td>
+                <td class="table-content"><%= episode.created_at %></td>
+                <td class="table-content button-link"><%= link_to "收聽" , player_podcast_episode_path(@podcast.random_url, episode.random_url) %></td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+      <div class="flex justify-center">
+        <button class="border rounded-md p-3 m-3 text-white bg-blue-500 hover:bg-blue-700">
+          <%= link_to "返回 Podcast 節目列表" , podcasts_path %>
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<%= render '/frontend/footer' %>
+
